--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">ionic-conference-app</string>
-    <string name="title_activity_main">ionic-conference-app</string>
-    <string name="package_name">ionic.conference.app</string>
-    <string name="custom_url_scheme">ionic.conference.app</string>
+    <string name="app_name">watan-camp</string>
+    <string name="title_activity_main">watan-camp</string>
+    <string name="package_name">com.raptor7.watan-camp</string>
+    <string name="custom_url_scheme">com.raptor7.watan-camp</string>
 </resources>
