--- a/src/assets/langs/ar.json
+++ b/src/assets/langs/ar.json
@@ -1,32 +1,83 @@
 {
-    "centers of Services":"مراكز الخدمة",
-    "sector":"القطاع",
-    "Center":"المركز",
-    "Governorate":"المحافظة",
-    "District":"المنطقة",
-    "SubsDistrict":"المنطقة الفرعية",
-    "Community":"المجتمع",
-    "Bakery":"المخبز",
+    "centers of Services": "مراكز الخدمة",
+    "sector": "القطاع",
+    "Center": "المركز",
+    "Governorate": "المحافظة",
+    "District": "المنطقة",
+    "SubsDistrict": "المنطقة الفرعية",
+    "Community": "المجتمع",
+    "Bakery": "المخبز",
+    "Needs": "الاحتياجات",
+    "Number of benenficires": "عدد المستفيدون",
+    "ofTent": "",
+    "HHs": "",
+    "men": "الرجال",
+    "women": "النساء",
+    "boys": "الاولاد",
+    "girls": "البنات",
+    "pwd": "",
+    "individual": "المجموع",
+    "Provide multi sectoral assistance project": "تقديم مشروع مساعدة متعدد القطاعات",
+    "governorate": "المحافظة",
+    "district": "المقاطعة",
+    "subsdistrict": "المقاطعة الفرعية",
+    "community": "المجتمع",
+    "site": "الموقع",
+    "Services/Activities updates": "تحديثات الخدمات/النشاطات", 
+    "Awareness": "التوعية",
+    "Bens": "المستفيدون",
+    "Reports": "التقارير",
+    "Complaints": "الشكاوي",
+    "About Watan": "حول وطن",
+    "Fill a complaint":"قدم شكوى",
+    "Call":"اتصال",
+    "Email":"ايميل",
 
-    "Needs":"الاحتياجات",
+    "Complaint":"شكوى",
+    "whatsapp":"واتساب",
+    "Complaint form":"نموذج شكوى",
 
-"Number of benenficires":"عدد المستفيدون",
+    "Full name":"الاسم الكامل",
+    "Phone":"الهاتف",
+    "Send complaint":"ارسال الشكوى",
 
-"ofTent":"",
-"HHs":"",
-"men":"الرجال",
-"women":"النساء",
-"boys":"الاولاد",
-"girls":"البنات",
-"pwd":"",
-"individual":"المجموع",
+    "Complaint subject":"موضوع الشكوى",
+    "Health Care":"العناية بالصحة",
+    "learning and training":"التعليم و التدريب",
+    "About":"حول",
+    "Sectors and services":"القطاعات والخدمات",
+    "Camp location":"مكان المخيم",
+
+    "Contact camp management":"اتصل بادارة المخيم",
+
+    "Camp map":"حريطة المخيم",
+    "Choose your language":"اختر لغتك",
+    "English":"الانكليزية",
+    "Choose your camp":"اختر المخيم",
 
 
 
-    "Awareness":"التوعية",
-    "Bens":"المستفيدون",
-    "Reports":"التقارير",
-    "Complaints":"الشكاوي",
-    "About Watan":"حول وطن"
+    "User name":"اسم المستخدم",
+    "password":"كلمة المرور",
+    "forget password":"نسيت كلمة المرور",
+    "You don't have an account?":"ليس لديك حساب؟",
+    "Sign in":"تسجيل الدخول",
+    "Sign up now":"تسجيل الآن",
+    "Role":"الفئة",
+    "Employee":"موظف",
+    "ben":"مستفيد",
+    "doner":"داعم",
+    "First name":"الاسم الاول",
+    "Last name":"الاسم الأخير",
+    "Phone number":"رقم الهاتف",
+    "Serial number":"الرقم التسلسلي",
+    "department":"القسم",
+    "Consfirm password":"تأكيد كلمة المرور",
+
+    "Reset":"إعادة",
+
+    "back":"للخلف",
+
+    "Sign up":"تسجيل"
 
 }
