fix: sgin in / sign up

--- a/src/assets/langs/ar.json
+++ b/src/assets/langs/ar.json
@@ -73,7 +73,7 @@
     "You don't have an account?":"ليس لديك حساب؟",
     "Sign in":"تسجيل الدخول",
     "Sign up now":"تسجيل الآن",
-    "Role":"الفئة",
+    "Account type":"نوع الحساب",
     "Employee":"موظف",
     "ben":"مستفيد",
     "doner":"داعم",
