feat: complaints validation, complaints admin

--- a/src/assets/langs/ar.json
+++ b/src/assets/langs/ar.json
@@ -2,7 +2,6 @@
     "centers of Services": "مراكز الخدمة",
     "Centers of Services": "مراكز الخدمة",
     "Centers of services": "مراكز الخدمة",
-
     "sector": "القطاع",
     "Center": "المركز",
     "Governorate": "المحافظة",
@@ -27,68 +26,55 @@
     "subsdistrict": "المقاطعة الفرعية",
     "community": "المجتمع",
     "site": "الموقع",
-    "Services/Activities updates": "تحديثات الخدمات/النشاطات", 
-    "Services/activities updates": "تحديثات الخدمات/النشاطات", 
-    "Services/activities update": "تحديثات الخدمات/النشاطات", 
-
-
+    "Services/Activities updates": "تحديثات الخدمات/النشاطات",
+    "Services/activities updates": "تحديثات الخدمات/النشاطات",
+    "Services/activities update": "تحديثات الخدمات/النشاطات",
     "Awareness": "التوعية",
     "Bens": "المستفيدون",
     "BENs": "المستفيدون",
-
     "Reports": "التقارير",
     "Complaints": "الشكاوي",
     "About Watan": "حول وطن",
-    "Fill a complaint":"قدم شكوى",
-    "Call":"اتصال",
-    "Email":"ايميل",
-
-    "Complaint":"شكوى",
-    "whatsapp":"واتساب",
-    "Complaint form":"نموذج شكوى",
-
-    "Full name":"الاسم الكامل",
-    "Phone":"الهاتف",
-    "Send complaint":"ارسال الشكوى",
-
-    "Complaint subject":"موضوع الشكوى",
-    "Health Care":"العناية بالصحة",
-    "learning and training":"التعليم و التدريب",
-    "About":"حول",
-    "Sectors and services":"القطاعات والخدمات",
-    "Camp location":"مكان المخيم",
-
-    "Contact camp management":"اتصل بادارة المخيم",
-
-    "Camp map":"حريطة المخيم",
-    "Choose your language":"اختر لغتك",
-    "English":"الانكليزية",
-    "Choose your camp":"اختر المخيم",
-
-
-
-    "User name":"اسم المستخدم",
-    "password":"كلمة المرور",
-    "forget password":"نسيت كلمة المرور",
-    "You don't have an account?":"ليس لديك حساب؟",
-    "Sign in":"تسجيل الدخول",
-    "Sign up now":"تسجيل الآن",
-    "Account type":"نوع الحساب",
-    "Employee":"موظف",
-    "ben":"مستفيد",
-    "doner":"داعم",
-    "First name":"الاسم الاول",
-    "Last name":"الاسم الأخير",
-    "Phone number":"رقم الهاتف",
-    "Serial number":"الرقم التسلسلي",
-    "department":"القسم",
-    "Consfirm password":"تأكيد كلمة المرور",
-
-    "Reset":"إعادة",
-
-    "back":"للخلف",
-
-    "Sign up":"تسجيل",
-    "camp":"المخيم"
-
+    "Fill a complaint": "قدم شكوى",
+    "Call": "اتصال",
+    "Email": "ايميل",
+    "Complaint": "شكوى",
+    "whatsapp": "واتساب",
+    "Complaint form": "نموذج شكوى",
+    "Full name": "الاسم الكامل",
+    "Phone": "الهاتف",
+    "Send complaint": "ارسال الشكوى",
+    "Complaint subject": "موضوع الشكوى",
+    "Health Care": "العناية بالصحة",
+    "learning and training": "التعليم و التدريب",
+    "About": "حول",
+    "Sectors and services": "القطاعات والخدمات",
+    "Camp location": "مكان المخيم",
+    "Contact camp management": "اتصل بادارة المخيم",
+    "Camp map": "حريطة المخيم",
+    "Choose your language": "اختر لغتك",
+    "English": "الانكليزية",
+    "Choose your camp": "اختر المخيم",
+    "User name": "اسم المستخدم",
+    "password": "كلمة المرور",
+    "forget password": "نسيت كلمة المرور",
+    "You don't have an account?": "ليس لديك حساب؟",
+    "Sign in": "تسجيل الدخول",
+    "Sign up now": "تسجيل الآن",
+    "Account type": "نوع الحساب",
+    "Employee": "موظف",
+    "ben": "مستفيد",
+    "doner": "داعم",
+    "First name": "الاسم الاول",
+    "Last name": "الاسم الأخير",
+    "Phone number": "رقم الهاتف",
+    "Serial number": "الرقم التسلسلي",
+    "department": "القسم",
+    "Consfirm password": "تأكيد كلمة المرور",
+    "Reset": "إعادة",
+    "back": "للخلف",
+    "Sign up": "تسجيل",
+    "camp": "المخيم",
+    "complaintSuccess": "تم رفع الشكوى بنجاح .. سيتم التواصل معكم بأسرع وقت ممكن",
+    "complaintFailed": "يرجى تعبئة جميع الحقول !!"
 }
