--- a/src/assets/langs/en.json
+++ b/src/assets/langs/en.json
@@ -1,3 +1,4 @@
 {
-    
+    "complaintSuccess": "Your complaint was uploaded .. we will contact you as soon as possible",
+    "complaintFailed": "Please fill all the fields !!"
 }
