fix: add translation

--- a/src/assets/langs/ar.json
+++ b/src/assets/langs/ar.json
@@ -76,5 +76,26 @@
     "Sign up": "تسجيل",
     "camp": "المخيم",
     "complaintSuccess": "تم رفع الشكوى بنجاح .. سيتم التواصل معكم بأسرع وقت ممكن",
-    "complaintFailed": "يرجى تعبئة جميع الحقول !!"
+    "Human Rights Manual": "دليل حقوق الانسان",
+    "Refugees Manual": "دليل اللاجئين",
+    "Women Rights Manual": "دليل حقوق المرأة",
+    "Childhood Manual": "دليل الطفولة",
+    "Public Health Manual": "دليل الصحة العامة",
+    "Hygiene Manual": "دليل النظافة",
+    "Workers Rights Manual": "دليل حقوق العمال",
+    "Social Cohesion manual": "دليل التماسك الاجتماعي",
+    "Emergency contacts": "معلومات الطوارئ",
+    "Reporting harassment, exploitation and abuse": "الإبلاغ عن التحرش والاستغلال وسوء المعاملة",
+    "Contact Camp Management": "الاتصال بإدارة المخيم",
+    "Health care": "العناية بالصحة",
+    "Learning and training": "التدريب و التعلم",
+    "WATAN services": "خدمات وطن",
+    "Local and International News": "الاخبار المحلية و العالمية",
+    "General Sports Exercises": "التمرينات الرياضية العامة",
+    "General nutritional Program": "برنامج التغذية العامة",
+    "specialist contact info": "معلومات الاتصال بالأخصائيين",
+    "health Sports Exercises": "التمارين الرياضية الصحية",
+    "health nutritional Program": "برنامج التغذية الصحي",
+    "health contact info": "معلومات الاتصال بالصحة"
+
 }
