fix: translate profile page

--- a/src/assets/langs/ar.json
+++ b/src/assets/langs/ar.json
@@ -96,6 +96,16 @@
     "specialist contact info": "معلومات الاتصال بالأخصائيين",
     "health Sports Exercises": "التمارين الرياضية الصحية",
     "health nutritional Program": "برنامج التغذية الصحي",
-    "health contact info": "معلومات الاتصال بالصحة"
+    "health contact info": "معلومات الاتصال بالصحة",
+    "Address": "العنوان",
+    "Date of birth": "تاريخ الميلاد",
+    "Role": "نوع الحساب",
+    "Welcome to Watan camp": "أهلا بكم في مخيم وطن",
+    "to see the content of this page": "لعرض محتويات هذه الصفحة",
+    "Please sign in!": "يرجى تسجيل الدخول",
+    "Camp": "المخيم",
+    "E-mail": "البريد الالكتروني"
+
+
 
 }
