fix: add missing pages content and bind profile default values

--- a/src/assets/langs/ar.json
+++ b/src/assets/langs/ar.json
@@ -51,7 +51,7 @@
     "Sectors and services": "القطاعات والخدمات",
     "Camp location": "مكان المخيم",
     "Contact camp management": "اتصل بادارة المخيم",
-    "Camp map": "حريطة المخيم",
+    "Camp map": "خريطة المخيم",
     "Choose your language": "اختر لغتك",
     "English": "الانكليزية",
     "Choose your camp": "اختر المخيم",
